[FIX] mrp: UI issue on manufacturing work orders kanban view
1. Install [Manufacturing]
2. Go to [Manufacturing]
- [Configuration] > [Settings], toggle on [Work Orders]
- [Operation] > [Work Orders]
- click on Kanban view
- remove all filters, then click on [Group By] - choose any

Issue: overflowing state tag beyond each kanban card

Resolve by: ordering line by line the information to display

Impacted versions: 16.0 up to master

opw-3162947

closes odoo/odoo#113240

--- a/addons/mrp/static/src/scss/mrp_workorder_kanban.scss
+++ b/addons/mrp/static/src/scss/mrp_workorder_kanban.scss
@@ -9,6 +9,9 @@
                 flex-basis: 100%
             }
         }
+        .o_kanban_group .o_kanban_record_top {
+            flex-direction: column;
+        }
         .o_kanban_record_top {
             justify-content: space-between;
             .o_kanban_workorder_title {
